--- a/.gitconfig
+++ b/.gitconfig
@@ -1,1 +1,72 @@
-/Users/cam/.dotfiles/Git/.gitconfig
+#~/.gitconfig
+
+[user]
+	name = Cam
+	email = 2276730+camjm@users.noreply.github.com
+[core]
+	autocrlf = input
+	editor = code --wait
+	excludesfile = ~/.gitignore_global
+	whitespace = fix,space-before-tab,tab-in-indent,trailing-space
+[push]
+	default = simple
+[commit]
+	template = ~/.stCommitMsg
+
+[diff]
+	log = true
+	tool = code # the tool used by git-difftool cli
+[difftool]
+	prompt = false
+[difftool "code"]
+	cmd = code --wait --diff $LOCAL $REMOTE
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+
+[merge]
+	log = true
+	tool = code # the tool used by git-mergetool cli
+[mergetool]
+	prompt = false
+[mergetool "code"]
+	cmd = code --wait $MERGED
+	trustExitCode = true
+[mergetool "sourcetree"]
+	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
+
+[alias]
+	br = branch -vv
+	ci = commit
+	co = checkout
+	df = diff
+	g = grep -I
+	lg = log -p
+	pp = !"echo 'Pull'; git pull; echo 'Push'; git push"
+	rb = rbranch
+	rv = review
+	st = status -s
+
+[color]
+	ui = auto
+[color "branch"]
+	current = yellow reverse
+	local = yellow
+	remote = green
+	upstream = cyan
+[color "diff"]
+	meta = yellow bold
+	frag = magenta bold
+	old = red bold
+	new = green bold
+[color "status"]
+	added = yellow
+	changed = green
+	untracked = cyan
+
+[filter "lfs"]
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
